Add version to comment header

--- a/bock/ui/cached_dist/index.html
+++ b/bock/ui/cached_dist/index.html
@@ -2,7 +2,8 @@
 Well aren't _you_ a curious little kitten?
 
 wiki.nikhil.io.ui - Web interface to my wiki
-@built Thu May 12 2016 15:00:30 GMT-0500 (CDT)
+@version 1.2.3
+@built Thu May 12 2016 15:27:03 GMT-0500 (CDT)
 @link https://github.com/afreeorange/bock
 @author Nikhil Anand <mail@nikhil.io>
 -->
