--- a/bock/ui/public/index.html
+++ b/bock/ui/public/index.html
@@ -4,6 +4,11 @@
         <meta charset="utf-8" />
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="author" content="Your name" />
+        <meta name="description" content="Brief description" />
+
+        <meta property="og:site_name" content="Your Site Name" />
+
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="Bock" />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
