--- a/bock/ui/public/index.html
+++ b/bock/ui/public/index.html
@@ -2,21 +2,24 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+        <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="author" content="Your name" />
-        <meta name="description" content="Brief description" />
+        <meta name="author" content="Nikhil Anand" />
+        <meta name="description" content="My personal wiki" />
 
-        <meta property="og:site_name" content="Your Site Name" />
+        <meta property="og:title" content="Bock" />
+        <meta property="og:description" content="My personal wiki" />
+        <meta property="og:url" content="%PUBLIC_URL%" />
+        <meta property="og:site_name" content="Bock" />
 
-        <meta name="theme-color" content="#000000" />
-        <meta name="description" content="Bock" />
+        <meta name="theme-color" content="#ffbe0d" />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <title>wiki.nikhil.io</title>
+        <title>bock</title>
     </head>
     <body>
-        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <noscript>Sorry, you&#8220;ll need to enable JavaScript to use this wiki 😕</noscript>
         <div id="root"></div>
     </body>
 </html>
