Fix assets in SPA

--- a/bock/ui/public/index.html
+++ b/bock/ui/public/index.html
@@ -6,16 +6,13 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="author" content="Nikhil Anand" />
-        <meta name="description" content="My personal wiki" />
-
-        <meta property="og:title" content="Bock" />
-        <meta property="og:description" content="My personal wiki" />
-        <meta property="og:url" content="%PUBLIC_URL%" />
-        <meta property="og:site_name" content="Bock" />
+        <meta name="description" content="Nikhil's Personal Wiki" />
 
         <meta name="theme-color" content="#ffbe0d" />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+        <link rel="og:image" href="%PUBLIC_URL%/logo512.png" />
+        <link rel="og:site_name" href="Nikhil's Personal Wiki" />
         <title>bock</title>
     </head>
     <body>
